fixed customer url, removed unused customer code

--- a/src/main/resources/templates/createCustomer.html
+++ b/src/main/resources/templates/createCustomer.html
@@ -6,7 +6,7 @@
     <body>
     	<h1>Kundenkonto anlegen</h1>
     	
-        <form action="#" th:action="@{/customer/create}" th:object="${customerForm}" method="post">
+        <form action="#" th:action="@{/customer}" th:object="${customerForm}" method="post">
 
             <table>
                 <tr>
