redirect urls, catch order error

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -24,6 +24,6 @@
         <td th:text="${handle}" />
     </tr>
 </table>
-<p th:text="${responseBody}"/>
+<p th:text="${responseBody} ?: ${error}"/>
 </body>
 </html>
