--- a/src/main/resources/templates/checklistForHandlebarType.html
+++ b/src/main/resources/templates/checklistForHandlebarType.html
@@ -3,6 +3,7 @@
 <head>
     <title>Select a Handlebar Type</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
 <h1>Lenkertyp auswählen</h1>
@@ -11,7 +12,8 @@
         <input type="radio" th:field="*{checkedItems}" th:value="${item}" />
         <label th:text="${item}">example</label>
     </div>
-    <input type="submit" />
+    <input type="submit" class="btn btn-secondary" />
 </form>
+<script src="../static/js/bootstrap.js" th:href="@{/js/bootstrap.js}"></script>
 </body>
 </html>
