--- a/src/main/resources/templates/createCustomer.html
+++ b/src/main/resources/templates/createCustomer.html
@@ -4,7 +4,7 @@
 	    <title>Create a new Customer</title>
         <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 	</head>
-    <body>
+    <body class="p-4">
     	<h1>Kundenkonto anlegen</h1>
     	
         <form action="#" th:action="@{/customer}" th:object="${customerForm}" method="post">
