--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
-<body>
+<body class="p-4">
 <h1>Bestellung</h1>
 <table>
     <tr>
